deploy/k8s/api/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: menuapi
  labels:
    app.kubernetes.io/name: menuapi
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: menu
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: menuapi
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: menu
  template:
    metadata:
      labels:
        app.kubernetes.io/name: menuapi
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: menu
    spec:
##      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: menuapi
          image: menuapi-image:tag
##          args:
##            - /nginx-ingress-controller
##            - --configmap=$(POD_NAMESPACE)/nginx-configuration
##          securityContext:
##            allowPrivilegeEscalation: false
##            capabilities:
##              drop:
##               - ALL
##              add:
##                - NET_BIND_SERVICE
##             www-data -> 33
##            runAsUser: 33
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
