deploy/k8s/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menuapi
  labels:
    app.kubernetes.io/name: menuapi
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: menu
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: menuapi
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: menu
